fixed issue with text without whitespaces not wrapping

--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center; 
+    box-sizing: border-box;
+    width: 100%;
+    flex: 1;
+    overflow: wrap;
 
     color: black;
     list-style: none;
@@ -53,6 +57,14 @@ h1 {
     border-radius: 10px;
 }
 
+
+.toDoLabel {
+    display: inline-block; /* or inline-block */
+    white-space: normal;
+    word-break: break-word;
+    overflow-wrap: break-word;
+}
+
 .category-container {
     
     width: 45%;
@@ -60,7 +72,7 @@ h1 {
 
 .completedToDoList {
     display:flex; 
-    flex-direction: column-reverse;
+    flex-direction: column;
     width: 45%;
 }
 
@@ -89,7 +101,7 @@ h1 {
 .completedToDoItem {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+
   }
 
 #remove-button {
